[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/mus/06.-title.wav" type="AudioStream" id=1]
[ext_resource path="res://object/mazes/maze_editor.gd" type="Script" id=2]
[ext_resource path="res://assets/objects/sun.png" type="Texture" id=3]
[ext_resource path="res://object/mazes/maze_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/scroll_bckg.gd" type="Script" id=5]
[ext_resource path="res://scenes/editor.gd" type="Script" id=6]
[ext_resource path="res://assets/mus/bckgndMus.gd" type="Script" id=7]
[ext_resource path="res://actors/player/player.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/backgrounds/background.png" type="Texture" id=10]
[ext_resource path="res://assets/mus/07.-elpepeetesech.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240, 41 )

[sub_resource type="Animation" id=2]
resource_name = "heatup"
length = 38.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 38.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.2, 0, 0, 1 ) ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 2112.0 ],
"_edit_vertical_guides_": [  ]
}

[node name="camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
limit_left = 0
limit_top = 0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 5 )

[node name="sun" type="Area2D" parent="camera"]
position = Vector2( 240, 0 )
z_index = 100
collision_layer = 4

[node name="sun_texture" type="TextureRect" parent="camera/sun"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_right = 240.0
margin_bottom = 41.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sun_hitbox" type="CollisionShape2D" parent="camera/sun"]
light_mask = 2
shape = SubResource( 1 )

[node name="border" type="TileMap" parent="camera"]
position = Vector2( 0, 540 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -2228225, 7, 0, -2293760, 7, 0, -2293759, 7, 0, -2293758, 7, 0, -2293757, 7, 0, -2293756, 7, 0, -2293755, 7, 0, -2293754, 7, 0, -2293753, 7, 0, -2293752, 7, 0, -2293751, 7, 0, -2293750, 7, 0, -2293749, 7, 0, -2293748, 7, 0, -2293747, 7, 0, -2293746, 7, 0, -2293745, 7, 0, -2293744, 7, 0, -2293743, 7, 0, -2293742, 7, 0, -2293741, 7, 0, -2293740, 7, 0, -2293739, 7, 0, -2293738, 7, 0, -2293737, 7, 0, -2293736, 7, 0, -2293735, 7, 0, -2293734, 7, 0, -2293733, 7, 0, -2293732, 7, 0, -2293731, 7, 0, -2293730, 7, 0, -2162689, 7, 0, -2228194, 7, 0, -2097153, 7, 0, -2162658, 7, 0, -2031617, 7, 0, -2097122, 7, 0, -1966081, 7, 0, -2031586, 7, 0, -1900545, 7, 0, -1966050, 7, 0, -1835009, 7, 0, -1900514, 7, 0, -1769473, 7, 0, -1834978, 7, 0, -1703937, 7, 0, -1769442, 7, 0, -1638401, 7, 0, -1703906, 7, 0, -1572865, 7, 0, -1638370, 7, 0, -1507329, 7, 0, -1572834, 7, 0, -1441793, 7, 0, -1507298, 7, 0, -1376257, 7, 0, -1441762, 7, 0, -1310721, 7, 0, -1376226, 7, 0, -1245185, 7, 0, -1310690, 7, 0, -1179649, 7, 0, -1245154, 7, 0, -1114113, 7, 0, -1179618, 7, 0, -1048577, 7, 0, -1114082, 7, 0, -983041, 7, 0, -1048546, 7, 0, -917505, 7, 0, -983010, 7, 0, -851969, 7, 0, -917474, 7, 0, -786433, 7, 0, -851938, 7, 0, -720897, 7, 0, -786402, 7, 0, -655361, 7, 0, -720896, 7, 0, -720895, 7, 0, -720894, 7, 0, -720893, 7, 0, -720892, 7, 0, -720891, 7, 0, -720890, 7, 0, -720889, 7, 0, -720888, 7, 0, -720887, 7, 0, -720886, 7, 0, -720885, 7, 0, -720884, 7, 0, -720883, 7, 0, -720882, 7, 0, -720881, 7, 0, -720880, 7, 0, -720879, 7, 0, -720878, 7, 0, -720877, 7, 0, -720876, 7, 0, -720875, 7, 0, -720874, 7, 0, -720873, 7, 0, -720872, 7, 0, -720871, 7, 0, -720870, 7, 0, -720869, 7, 0, -720868, 7, 0, -720867, 7, 0, -720866, 7, 0 )

[node name="background_texture" type="TextureRect" parent="camera"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 974.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="animation" type="AnimationPlayer" parent="camera/background_texture"]
anims/heatup = SubResource( 2 )

[node name="maze_generation" type="Node" parent="."]

[node name="maze_editor" type="TileMap" parent="maze_generation"]
position = Vector2( 0, 270 )
scale = Vector2( 2, 2 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( -720896, 7, 0, -720895, 7, 0, -720894, 7, 0, -720893, 7, 0, -720892, 7, 0, -720891, 7, 0, -720890, 7, 0, -720889, 7, 0, -720888, 7, 0, -720887, 7, 0, -720886, 7, 0, -720885, 7, 0, -720884, 7, 0, -720883, 7, 0, -720882, 7, 0, -720880, 7, 0, -720879, 7, 0, -720878, 7, 0, -720877, 7, 0, -720876, 7, 0, -720875, 7, 0, -720874, 7, 0, -720873, 7, 0, -720872, 7, 0, -720871, 7, 0, -720870, 7, 0, -720869, 7, 0, -720868, 7, 0, -720867, 7, 0, -655360, 7, 0, -655359, 7, 0, -655358, 7, 0, -655357, 7, 0, -655356, 7, 0, -655355, 7, 0, -655354, 7, 0, -655353, 7, 0, -655352, 7, 0, -655351, 7, 0, -655350, 7, 0, -655349, 7, 0, -655348, 7, 0, -655347, 7, 0, -655346, 7, 0, -655344, 7, 0, -655343, 7, 0, -655342, 7, 0, -655341, 7, 0, -655340, 7, 0, -655339, 7, 0, -655338, 7, 0, -655337, 7, 0, -655336, 7, 0, -655335, 7, 0, -655334, 7, 0, -655333, 7, 0, -655332, 7, 0, -655331, 7, 0, -589824, 7, 0, -589823, 7, 0, -589822, 7, 0, -589821, 7, 0, -589820, 7, 0, -589819, 7, 0, -589818, 7, 0, -589817, 7, 0, -589816, 7, 0, -589815, 7, 0, -589814, 7, 0, -589813, 7, 0, -589812, 7, 0, -589811, 7, 0, -589810, 7, 0, -589808, 7, 0, -589807, 7, 0, -589806, 7, 0, -589805, 7, 0, -589804, 7, 0, -589803, 7, 0, -589802, 7, 0, -589801, 7, 0, -589800, 7, 0, -589799, 7, 0, -589798, 7, 0, -589797, 7, 0, -589796, 7, 0, -589795, 7, 0, -524288, 7, 0, -524287, 7, 0, -524286, 7, 0, -524285, 7, 0, -524284, 7, 0, -524283, 7, 0, -524282, 7, 0, -524281, 7, 0, -524280, 7, 0, -524279, 7, 0, -524278, 7, 0, -524277, 7, 0, -524276, 7, 0, -524275, 7, 0, -524274, 7, 0, -524272, 7, 0, -524271, 7, 0, -524270, 7, 0, -524269, 7, 0, -524268, 7, 0, -524267, 7, 0, -524266, 7, 0, -524265, 7, 0, -524264, 7, 0, -524263, 7, 0, -524262, 7, 0, -524261, 7, 0, -524260, 7, 0, -524259, 7, 0, -458752, 7, 0, -458751, 7, 0, -458750, 7, 0, -458749, 7, 0, -458748, 7, 0, -458747, 7, 0, -458746, 7, 0, -458745, 7, 0, -458744, 7, 0, -458743, 7, 0, -458742, 7, 0, -458741, 7, 0, -458740, 7, 0, -458739, 7, 0, -458738, 7, 0, -458736, 7, 0, -458735, 7, 0, -458734, 7, 0, -458733, 7, 0, -458732, 7, 0, -458731, 7, 0, -458730, 7, 0, -458729, 7, 0, -458728, 7, 0, -458727, 7, 0, -458726, 7, 0, -458725, 7, 0, -458724, 7, 0, -458723, 7, 0, -393216, 7, 0, -393215, 7, 0, -393214, 7, 0, -393213, 7, 0, -393212, 7, 0, -393211, 7, 0, -393210, 7, 0, -393209, 7, 0, -393208, 7, 0, -393207, 7, 0, -393206, 7, 0, -393205, 7, 0, -393204, 7, 0, -393203, 7, 0, -393202, 7, 0, -393200, 7, 0, -393199, 7, 0, -393198, 7, 0, -393197, 7, 0, -393196, 7, 0, -393195, 7, 0, -393194, 7, 0, -393193, 7, 0, -393192, 7, 0, -393191, 7, 0, -393190, 7, 0, -393189, 7, 0, -393188, 7, 0, -393187, 7, 0, -327680, 7, 0, -327679, 7, 0, -327678, 7, 0, -327677, 7, 0, -327676, 7, 0, -327675, 7, 0, -327674, 7, 0, -327673, 7, 0, -327672, 7, 0, -327671, 7, 0, -327670, 7, 0, -327669, 7, 0, -327668, 7, 0, -327667, 7, 0, -327666, 7, 0, -327664, 7, 0, -327663, 7, 0, -327662, 7, 0, -327661, 7, 0, -327660, 7, 0, -327659, 7, 0, -327658, 7, 0, -327657, 7, 0, -327656, 7, 0, -327655, 7, 0, -327654, 7, 0, -327653, 7, 0, -327652, 7, 0, -327651, 7, 0, -262144, 7, 0, -262143, 7, 0, -262142, 7, 0, -262141, 7, 0, -262140, 7, 0, -262139, 7, 0, -262138, 7, 0, -262137, 7, 0, -262136, 7, 0, -262135, 7, 0, -262134, 7, 0, -262133, 7, 0, -262132, 7, 0, -262131, 7, 0, -262130, 7, 0, -262128, 7, 0, -262127, 7, 0, -262126, 7, 0, -262125, 7, 0, -262124, 7, 0, -262123, 7, 0, -262122, 7, 0, -262121, 7, 0, -262120, 7, 0, -262119, 7, 0, -262118, 7, 0, -262117, 7, 0, -262116, 7, 0, -262115, 7, 0, -196608, 7, 0, -196607, 7, 0, -196606, 7, 0, -196605, 7, 0, -196604, 7, 0, -196603, 7, 0, -196602, 7, 0, -196601, 7, 0, -196600, 7, 0, -196599, 7, 0, -196598, 7, 0, -196597, 7, 0, -196596, 7, 0, -196595, 7, 0, -196594, 7, 0, -196592, 7, 0, -196591, 7, 0, -196590, 7, 0, -196589, 7, 0, -196588, 7, 0, -196587, 7, 0, -196586, 7, 0, -196585, 7, 0, -196584, 7, 0, -196583, 7, 0, -196582, 7, 0, -196581, 7, 0, -196580, 7, 0, -196579, 7, 0, -131072, 7, 0, -131071, 7, 0, -131070, 7, 0, -131069, 7, 0, -131068, 7, 0, -131067, 7, 0, -131066, 7, 0, -131065, 7, 0, -131064, 7, 0, -131063, 7, 0, -131062, 7, 0, -131061, 7, 0, -131060, 7, 0, -131059, 7, 0, -131058, 7, 0, -131056, 7, 0, -131055, 7, 0, -131054, 7, 0, -131053, 7, 0, -131052, 7, 0, -131051, 7, 0, -131050, 7, 0, -131049, 7, 0, -131048, 7, 0, -131047, 7, 0, -131046, 7, 0, -131045, 7, 0, -131044, 7, 0, -131043, 7, 0, -65536, 7, 0, -65535, 7, 0, -65534, 7, 0, -65533, 7, 0, -65532, 7, 0, -65531, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 7, 0, -65525, 7, 0, -65524, 7, 0, -65523, 7, 0, -65522, 7, 0, -65520, 7, 0, -65519, 7, 0, -65518, 7, 0, -65517, 7, 0, -65516, 7, 0, -65515, 7, 0, -65514, 7, 0, -65513, 7, 0, -65512, 7, 0, -65511, 7, 0, -65510, 7, 0, -65509, 7, 0, -65508, 7, 0, -65507, 7, 0, 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 19, 7, 0, 20, 7, 0, 21, 7, 0, 22, 7, 0, 23, 7, 0, 24, 7, 0, 25, 7, 0, 26, 7, 0, 27, 7, 0, 28, 7, 0, 29, 7, 0 )
script = ExtResource( 2 )

[node name="trees" type="TileMap" parent="maze_generation/maze_editor"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
collision_use_kinematic = true
collision_layer = 8
collision_mask = 0
format = 1

[node name="dmg" type="TileMap" parent="maze_generation/maze_editor"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
collision_use_kinematic = true
collision_layer = 16
collision_mask = 0
format = 1

[node name="indicator" type="TileMap" parent="maze_generation/maze_editor"]
z_index = 100
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -2228225, 7, 0, -2293760, 7, 0, -2293759, 7, 0, -2293758, 7, 0, -2293757, 7, 0, -2293756, 7, 0, -2293755, 7, 0, -2293754, 7, 0, -2293753, 7, 0, -2293752, 7, 0, -2293751, 7, 0, -2293750, 7, 0, -2293749, 7, 0, -2293748, 7, 0, -2293747, 7, 0, -2293746, 7, 0, -2293745, 7, 0, -2293744, 7, 0, -2293743, 7, 0, -2293742, 7, 0, -2293741, 7, 0, -2293740, 7, 0, -2293739, 7, 0, -2293738, 7, 0, -2293737, 7, 0, -2293736, 7, 0, -2293735, 7, 0, -2293734, 7, 0, -2293733, 7, 0, -2293732, 7, 0, -2293731, 7, 0, -2293730, 7, 0, -2162689, 7, 0, -2228194, 7, 0, -2097153, 7, 0, -2162658, 7, 0, -2031617, 7, 0, -2097122, 7, 0, -1966081, 7, 0, -2031586, 7, 0, -1900545, 7, 0, -1966050, 7, 0, -1835009, 7, 0, -1900514, 7, 0, -1769473, 7, 0, -1834978, 7, 0, -1703937, 7, 0, -1769442, 7, 0, -1638401, 7, 0, -1703906, 7, 0, -1572865, 7, 0, -1638370, 7, 0, -1507329, 7, 0, -1572834, 7, 0, -1441793, 7, 0, -1507298, 7, 0, -1376257, 7, 0, -1441762, 7, 0, -1310721, 7, 0, -1376226, 7, 0, -1245185, 7, 0, -1310690, 7, 0, -1179649, 7, 0, -1245154, 7, 0, -1114113, 7, 0, -1179618, 7, 0, -1048577, 7, 0, -1114082, 7, 0, -983041, 7, 0, -1048546, 7, 0, -917505, 7, 0, -983010, 7, 0, -851969, 7, 0, -917474, 7, 0, -786433, 7, 0, -851938, 7, 0, -720897, 7, 0, -786402, 7, 0, -655361, 7, 0, -720896, 7, 0, -720895, 7, 0, -720894, 7, 0, -720893, 7, 0, -720892, 7, 0, -720891, 7, 0, -720890, 7, 0, -720889, 7, 0, -720888, 7, 0, -720887, 7, 0, -720886, 7, 0, -720885, 7, 0, -720884, 7, 0, -720883, 7, 0, -720882, 7, 0, -720880, 7, 0, -720879, 7, 0, -720878, 7, 0, -720877, 7, 0, -720876, 7, 0, -720875, 7, 0, -720874, 7, 0, -720873, 7, 0, -720872, 7, 0, -720871, 7, 0, -720870, 7, 0, -720869, 7, 0, -720868, 7, 0, -720867, 7, 0, -720866, 7, 0 )

[node name="bckgndMus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
script = ExtResource( 7 )

[node name="elpepe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 136.846, 88.396 )
speed = Vector2( 120, 180 )
gravity = 800.0

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 2.0
margin_top = 43.0
margin_right = 107.0
margin_bottom = 67.0
placeholder_text = "Filename"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="LineEdit"]
margin_left = 108.0
margin_top = 2.0
margin_right = 154.0
margin_bottom = 23.0
text = "Save"

[connection signal="area_entered" from="camera/sun" to="." method="touched_sun"]
[connection signal="finished" from="bckgndMus" to="bckgndMus" method="finished_bgm"]
[connection signal="finished" from="elpepe" to="bckgndMus" method="_on_elpepe_finished"]
[connection signal="button_down" from="LineEdit/Button" to="." method="save"]
